# pkg/handlers/handler.go
@@ -1,19 +1,27 @@
 package handlers
 
 import (
+	"time"
+
 	_ "github.com/DmytroBeliasnyk/crud_app_rest_api/docs"
 	"github.com/DmytroBeliasnyk/crud_app_rest_api/pkg/config"
 	"github.com/DmytroBeliasnyk/crud_app_rest_api/pkg/services"
-	"github.com/DmytroBeliasnyk/in_memory_cache/memory"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+//go:generate mockgen -source=handler.go -destination=mocks/mock.go
+type Cache interface {
+	Set(key string, value interface{}, ttl time.Duration) error
+	Get(key string) (interface{}, error)
+	Delete(key string)
+}
+
 type Handler struct {
 	service *services.AbstractService
 	cfg     cookieConfig
-	cache   *memory.Cache
+	cache   Cache
 }
 
 type cookieConfig struct {
@@ -25,7 +33,7 @@ type cookieConfig struct {
 	httpOnly bool
 }
 
-func NewHandler(service *services.AbstractService, config *config.Config, cache *memory.Cache) *Handler {
+func NewHandler(service *services.AbstractService, config *config.Config, cache Cache) *Handler {
 	cooks := config.Cookie
 	return &Handler{
 		service: service,
@@ -62,8 +70,8 @@ func (h *Handler) InitRoutes() *gin.Engine {
 			projects.POST("/", h.create)
 			projects.GET("/", h.getAll)
 			projects.GET("", h.getById)
-			projects.POST("/:id", h.updateById)
-			projects.DELETE("/:id", h.deleteById)
+			projects.POST("", h.updateById)
+			projects.DELETE("", h.deleteById)
 		}
 	}
 
