# pkg/handlers/project_handler.go
@@ -31,16 +31,22 @@ func (h *Handler) create(c *gin.Context) {
 		return
 	}
 
-	id, err := h.service.ProjectService.Create(input, c.GetInt64("user_id"))
+	userId := c.GetInt64("user_id")
+	if userId == 0 {
+		newErrResponse(c, http.StatusUnauthorized, "user not found")
+		return
+	}
+
+	projectId, err := h.service.ProjectService.Create(input, userId)
 	if err != nil {
 		newErrResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	h.cache.Delete("all")
+	h.cache.Delete(fmt.Sprintf("all%d", userId))
 
 	c.JSON(http.StatusCreated, map[string]interface{}{
-		"id": id,
+		"id": projectId,
 	})
 }
 
@@ -59,25 +65,33 @@ func (h *Handler) create(c *gin.Context) {
 //	@Failure		default	{object}	errResponse
 //	@Router			/api/projects [get]
 func (h *Handler) getById(c *gin.Context) {
-	paramId := c.Query("id")
+	projectId, err := strconv.Atoi(c.Query("id"))
+	if err != nil || projectId == 0 {
+		newErrResponse(c, http.StatusBadRequest, fmt.Sprintf("%s: message: invalid id param", err))
+		return
+	}
+
 	userId := c.GetInt64("user_id")
-	cache := fmt.Sprintf("%s%d", paramId, userId)
+	if userId == 0 {
+		newErrResponse(c, http.StatusUnauthorized, "user unauthorized")
+		return
+	}
+
+	cache := fmt.Sprintf("%d%d", projectId, userId)
 
 	project, err := h.cache.Get(cache)
 	if err != nil {
-		projectId, err := strconv.Atoi(c.Query("id"))
-		if err != nil {
-			newErrResponse(c, http.StatusBadRequest, fmt.Sprintf("%s: message: invalid id param", err))
-			return
-		}
-
 		project, err = h.service.ProjectService.GetById(int64(projectId), userId)
 		if err != nil {
 			newErrResponse(c, http.StatusInternalServerError, err.Error())
 			return
 		}
 
-		h.cache.Set(cache, project, time.Hour)
+		if err = h.cache.Set(cache, project, time.Hour); err != nil {
+			h.cache.Delete(cache)
+			newErrResponse(c, http.StatusInternalServerError, err.Error())
+			return
+		}
 	}
 
 	c.JSON(http.StatusOK, project)
@@ -97,6 +111,11 @@ func (h *Handler) getById(c *gin.Context) {
 //	@Router			/api/projects/ [get]
 func (h *Handler) getAll(c *gin.Context) {
 	userId := c.GetInt64("user_id")
+	if userId == 0 {
+		newErrResponse(c, http.StatusUnauthorized, "user unauthorized")
+		return
+	}
+
 	cache := fmt.Sprintf("all%d", userId)
 
 	projects, err := h.cache.Get(cache)
@@ -107,7 +126,11 @@ func (h *Handler) getAll(c *gin.Context) {
 			return
 		}
 
-		h.cache.Set(cache, projects, time.Hour)
+		if err = h.cache.Set(cache, projects, time.Hour); err != nil {
+			h.cache.Delete(cache)
+			newErrResponse(c, http.StatusInternalServerError, err.Error())
+			return
+		}
 	}
 
 	c.JSON(http.StatusOK, projects)
@@ -121,17 +144,22 @@ func (h *Handler) getAll(c *gin.Context) {
 //	@Security		ApiKeyAuth
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path		integer			true	"project id"
+//	@Param			id		query		integer			true	"project id"
 //	@Param			input	body		dto.ProjectDTO	true	"project info"
 //	@Success		200		{object}	statusResponse
 //	@Failure		400		{object}	errResponse
 //	@Failure		500		{object}	errResponse
 //	@Failure		default	{object}	errResponse
-//	@Router			/api/projects/{id} [post]
+//	@Router			/api/projects [post]
 func (h *Handler) updateById(c *gin.Context) {
-	paramId := c.Param("id")
-	id, err := strconv.Atoi(paramId)
-	if err != nil {
+	userId := c.GetInt64("user_id")
+	if userId == 0 {
+		newErrResponse(c, http.StatusUnauthorized, "user unauthorized")
+		return
+	}
+
+	projectId, err := strconv.Atoi(c.Query("id"))
+	if err != nil || projectId == 0 {
 		newErrResponse(c, http.StatusBadRequest, fmt.Sprintf("%s: message: invalid id param", err))
 		return
 	}
@@ -147,13 +175,12 @@ func (h *Handler) updateById(c *gin.Context) {
 		return
 	}
 
-	userId := c.GetInt64("user_id")
-	if err = h.service.ProjectService.UpdateById(int64(id), input, userId); err != nil {
+	if err = h.service.ProjectService.UpdateById(int64(projectId), input, userId); err != nil {
 		newErrResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	h.cache.Delete(fmt.Sprintf("%s%d", paramId, userId))
+	h.cache.Delete(fmt.Sprintf("%d%d", projectId, userId))
 	h.cache.Delete(fmt.Sprintf("all%d", userId))
 
 	c.JSON(http.StatusOK, statusResponse{"ok"})
@@ -167,27 +194,31 @@ func (h *Handler) updateById(c *gin.Context) {
 //	@Security		ApiKeyAuth
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path		integer	true	"project id"
+//	@Param			id		query		integer	true	"project id"
 //	@Success		200		{object}	statusResponse
 //	@Failure		400		{object}	errResponse
 //	@Failure		500		{object}	errResponse
 //	@Failure		default	{object}	errResponse
-//	@Router			/api/projects/{id} [delete]
+//	@Router			/api/projects [delete]
 func (h *Handler) deleteById(c *gin.Context) {
-	paramId := c.Param("id")
-	id, err := strconv.Atoi(paramId)
-	if err != nil {
+	userId := c.GetInt64("user_id")
+	if userId == 0 {
+		newErrResponse(c, http.StatusUnauthorized, "user unauthorized")
+		return
+	}
+
+	projectId, err := strconv.Atoi(c.Query("id"))
+	if err != nil || projectId == 0 {
 		newErrResponse(c, http.StatusBadRequest, fmt.Sprintf("%s: message: invalid id param", err))
 		return
 	}
 
-	userId := c.GetInt64("user_id")
-	if err = h.service.ProjectService.DeleteById(int64(id), userId); err != nil {
+	if err = h.service.ProjectService.DeleteById(int64(projectId), userId); err != nil {
 		newErrResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	h.cache.Delete(fmt.Sprintf("%s%d", paramId, userId))
+	h.cache.Delete(fmt.Sprintf("%d%d", projectId, userId))
 	h.cache.Delete(fmt.Sprintf("all%d", userId))
 
 	c.JSON(http.StatusOK, statusResponse{"ok"})
